# aifsmcomp

./: .gitignore  chatgpt-chat-1.md  copilot-chat-1.md  pyproject.toml
src/chatgptvalve/: chatgptvalve.py
src/copilotvalve/: copilotvalve.py
tests/: test_chatgptvalve.py  test_copilotvalve.py
